workloads/gowa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowa
  namespace: gowa
  labels:
    app: gowa
spec:
  selector:
    app: gowa
  ports:
    - protocol: TCP
      port: 3000
      targetPort: http
      name: http
