workloads/gowa/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowa
  namespace: gowa
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - gowa
  defaultBackend:
    service:
      name: gowa
      port:
        number: 3000
